--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-12-20  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* ru.po: Updated the Russian translation by
+	Andrey Fedoseev <andrey.fedoseev@gmail.com>
 2006-12-19  Nick Schermer <nick@xfce.org>
 
     * POTFILES.in: Removed the testplugin
