--- a/po/ca.po
+++ b/po/ca.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.99.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-12-19 19:30+0100\n"
-"PO-Revision-Date: 2006-09-20 13:11+0200\n"
+"PO-Revision-Date: 2006-12-23 19:36+0100\n"
 "Last-Translator: Pau Rul.lan Ferragut <paurullan@bulma.net>\n"
 "Language-Team: catalan\n"
 "MIME-Version: 1.0\n"
@@ -675,9 +675,7 @@ msgstr "Llista de finestres"
 msgid ""
 "<i>Urgency notification</i> will blink the button when an application needs "
 "attention."
-msgstr ""
-"Les <i>notificacions urgents</i> faran pipelletjar els botons quan una "
-"aplicació demani de la vostra atenció."
+msgstr "Les <i>notificacions urgents</i> faran parpalletjar els botons quan una aplicació demani de la vostra atenció."
 
 #. Button Urgency Notification
 #: ../plugins/windowlist/windowlist-dialog.c:154
