--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-12-23  Pau Rul-lan Ferragut <paurullan@bulma.net>
+
+    * ca.po: little updated to Catalan translation
+
 2006-12-20  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* ru.po: Updated the Russian translation by
