--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-12-25  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* mk.po: Added the Macedonian translation by
+	Jovan Naumovski <jovan@lugola.net>
+
 2006-12-23  Pau Rul-lan Ferragut <paurullan@bulma.net>
 
     * ca.po: little updated to Catalan translation
