--- a/HACKING
+++ b/HACKING
@@ -2,48 +2,57 @@ This file describes the coding style I prefer for the panel. If you want to
 help out with panel development, please try to conform to these 'rules'.
 -- Jasper
 
-* 2005-1-3
+* 2006-12-26
 
-Somewhere in the past year I decided to expand tabs, to make sure there's no
-misunderstanding in how I want things to look.
+Nick prefers to align variable declarations, so here is an updated set of rules:
 
+- Coding style:
+  o Indentation is 4 spaces. Expand tabs, i.e. only use spaces for indentation.
+  o Braces are on a new line. For one-line if statements braces may be omitted.
+  o Return type of function definitions on a separate line.
+  o Function arguments on separate lines with the same alignment rules as 
+    variable declarations.
+  o Variable declarations are aligned on the variable name. Short variable 
+    declarations may be combined. Example:
 
-* 2003-05-17
+    static gboolean
+    example_function (GtkWidget *widget,
+                      Panel     *panel,
+                      int        value)
+    {
+        XfceHandleType  type;
+        const char     *string;
+        int             important_value;
+        int             i, n, x, y;
+        /* ... */
+    }
 
-Updated the .indent.pro to use Olivier's new version. He seems he conformed to
-my standards this time ;-)) (<-- this is a joke, please laugh) Anyway, his new
-version has all the things I find important.
+  o In header files and for static prototypes, you may align functions names as
+    well as arguments. No need to limit the line length. Example:
 
+    static gboolean     xfce_panel_long_name_for_example_function        (GtkWidget  *widget,
+                                                                          Panel      *panel,
+                                                                          int         value);
 
-* 2003-04-02
+    static void         example_function_2                               (Panel      *panel,
+                                                                          const char *value);
 
-If you are interested in working on the panel that is of course enormously
-appreciated. I would like to ask you to follow a small number of rules to ease
-the maintainer's job a little.
+- ChangeLog: I use the svn2cl package to create the changelog from the SVN log
+  messages. 
+  o Website: http://ch.tudelft.nl/~arthur/svn2cl/ . 
+  o Current version: 0.8. 
+  o Command line: svn2cl.sh --linelen=74 --break-before-msg .
+  Note: I don't care about linelen, but with this parameter the changes with
+        previous ChangeLog were smallest.
 
-- Please use the .indent.pro file provided in this directory to format your
-  files. Since we didn't seem to agree on a common coding style for the entire
-  project I took the liberty to adapt Olivier's file (found in xfwm4/src/) a
-  little to better suit my own taste. The most important aspects are:
-  o indentation is 4 spaces (which does not equal 1 tab!)
-  o braces are on a new line
-  o return type for function definitions on separate line
+- Patches: use 'svn diff' to create patches if possible, or 'diff -u'.
 
-- If you have CVS access it's alright to commit bugfixes or trivial changes to 
-  CVS directly. But please send a patch to the mailing list for any 
-  non-trivial and/or non-obvious changes for discussion. When in doubt, ask 
-  first. Make patches by running `cvs diff -u > <patchfile>'.
+- If you have SVN access it is ok to commit trivial changes directly, but 
+  please send a patch to the mailing list for discussion for any non-trivial
+  or non-obvious changes.
 
-- Patches are always welcome please use `diff -Naur <oldfile> <newfile>' to
-  create them or use the cvs method mentioned above. You can send them to the 
-  mailing list for discussion.
+- As an exception to the rule above, if you are managing an Xfce release, feel 
+  free to do anything you need to achieve that goal.
 
-If we all stick to these guidelines I'm sure the code will remain as clean and
-readable as it it today (Ahem ... ;).
-
-Look at the README and TODO for a bit more information, but be careful, it may
-not be entirely up to date.
-
-Thanks,
-	Jasper
-	
+- Managing the po/ directory, including the ChangeLog found there is left 
+  completely in the hands of the Xfce Translation Team.
