--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-05  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* de.po: Updated the German translation by
+	Fabian Nowak <timystery@arcor.de>
+
 2006-12-25  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* mk.po: Added the Macedonian translation by
