--- a/po/de.po
+++ b/po/de.po
@@ -2,14 +2,14 @@
 # Copyright (C) 2002-2006 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Moritz Heiber <moe@xfce.org>, 2003-2005.
-# Fabian Nowak <timystery@arcor.de>, 2005, 2006.
+# Fabian Nowak <timystery@arcor.de>, 2005-2007.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.99.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-12-19 19:30+0100\n"
-"PO-Revision-Date: 2006-08-27 19:28+0200\n"
+"PO-Revision-Date: 2007-01-04 00:27+0100\n"
 "Last-Translator: Fabian Nowak <timystery@arcor.de>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -155,7 +155,7 @@ msgstr ""
 "\n"
 "Xfce-Leiste %s\n"
 "\n"
-"Teil der Xfce Desktop-Umgebung\n"
+"Teil der Xfce Arbeitsumgebung\n"
 "http://www.xfce.org\n"
 "\n"
 "Lizensiert unter GNU GPL.\n"
@@ -512,7 +512,7 @@ msgstr "In _Terminal ausführen"
 
 #: ../plugins/launcher/launcher-dialog.c:707
 msgid "Use _startup notification"
-msgstr "Benutze _grafische Rückmeldung"
+msgstr "_Visuelle Rückmeldung über Programmstart"
 
 #: ../plugins/launcher/launcher-dialog.c:1289
 msgid ""
@@ -730,7 +730,7 @@ msgstr "Aktionsknöpfe"
 
 #: ../plugins/actions/actions.desktop.in.in.h:2
 msgid "Log out or lock the screen"
-msgstr "Abmelden oder Desktop sperren"
+msgstr "Abmelden oder Bildschirm sperren"
 
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
@@ -750,7 +750,7 @@ msgstr "Programmstarter mit optionalem Menü"
 
 #: ../plugins/pager/pager.desktop.in.in.h:1
 msgid "Miniature view of all virtual desktops"
-msgstr "Miniaturansicht aller virtueller Desktops"
+msgstr "Miniaturansicht aller virtuellen Arbeitsoberflächen"
 
 #: ../plugins/separator/separator.desktop.in.in.h:1
 msgid "Adds a space or a line between panel items"
@@ -759,7 +759,7 @@ msgstr ""
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:1
 msgid "Show Desktop"
-msgstr "Arbeitsfläche anzeigen"
+msgstr "Arbeitsoberfläche anzeigen"
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:2
 msgid "Toggle desktop show/hide"
