Updated the Catalan translation of the xfce4-panel package by Ivà Burgos
(Old svn revision: 24331)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-09  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* ca.po: Updated the Catalan translation by
+	Ivà Burgos <debian.public@gmail.com>
+
 2007-01-05  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* de.po: Updated the German translation by
