2007-01-18  Alexander Nyakhaychyk  <nyakhaychyk@gmail.com>
	* be.po: Updated Belarusian Translation



(Old svn revision: 24530)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-18  Alexander Nyakhaychyk  <nyakhaychyk@gmail.com>
+
+	* be.po: Updated Belarusian Translation
+
 2007-01-09  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* ca.po: Updated the Catalan translation by
