Updated the Polish translations by Szymon Kałasz for the mcs-plugins, libxfce4util, thunar, panel and xfdesktop packages. Also added the new Polish translation for the Thunar documentation to the po-doc folder.
(Old svn revision: 24597)

--- a/po/pl.po
+++ b/po/pl.po
@@ -545,7 +545,7 @@ msgid ""
 "lost)."
 msgstr ""
 "GUI Zero Install zakończyło operacje lecz okno dialogowe zniknęło. Nie "
-"dodaję żadnych wyzwalaczy."
+"dodaję żadnych aktywatorów."
 
 #: ../plugins/launcher/launcher-dialog.c:1899
 msgid "Select file"
@@ -743,7 +743,7 @@ msgstr "Aktywator"
 
 #: ../plugins/launcher/launcher.desktop.in.in.h:2
 msgid "Program launcher with optional menu"
-msgstr "Wyzwalacz programu z opcjonalnym menu"
+msgstr "Aktywator programu z opcjonalnym menu"
 
 #: ../plugins/pager/pager.desktop.in.in.h:1
 msgid "Miniature view of all virtual desktops"
