--- a/po/mk.po
+++ b/po/mk.po
@@ -5,7 +5,7 @@
 # Jovan Naumovski <jovan@lugola.net>, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel\n"
+"Project-Id-Version: xfce4-panel 4.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-12-19 19:30+0100\n"
 "PO-Revision-Date: 2006-12-24 01:15+0100\n"
