--- a/po/pa.po
+++ b/po/pa.po
@@ -7,7 +7,7 @@
 # A S Alam <apbrar@gmail.com>, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: pa\n"
+"Project-Id-Version: xfce4-panel 4.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-12-19 19:30+0100\n"
 "PO-Revision-Date: 2006-12-22 21:35+0530\n"
