--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -5,54 +5,54 @@
 # Yongtao Yang <yongtao.yang@telia.com>, 2004.
 # Huang Huan <unicon221@gmail.com>, 2006.
 # Jick Nan <jick.nan@gmail.com>, 2006.
-# 
+# wuli <wurisky@gmail.com>,2007
 # 
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-12-19 19:30+0100\n"
-"PO-Revision-Date: 2006-04-20 21:45+0800\n"
-"Last-Translator: Jick Nan <jick.nan@gmail.com>\n"
-"Language-Team: Chinese/Simplified <i18n-translation@lists.linux.net.cn>\n"
+"PO-Revision-Date: 2007-02-07 20:38+0800\n"
+"Last-Translator: wuli <wurisky@gmail.com>\n"
+"Language-Team: Chinese/Simplified <risky@linuxsir.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: ../config/launcher-7.rc.in.h:1
-#, fuzzy
+#, 
 msgid "Command Prompt"
-msgstr "命令"
+msgstr "命令提示符"
 
 #: ../config/launcher-7.rc.in.h:2
 msgid "X terminal emulator"
-msgstr ""
+msgstr "X 终端模拟器"
 
 #: ../config/launcher-8.rc.in.h:1
 msgid "Edit text files"
-msgstr ""
+msgstr "编辑文本文件"
 
 #: ../config/launcher-8.rc.in.h:2 ../plugins/launcher/launcher-dialog.c:102
 msgid "Editor"
 msgstr "编辑器"
 
 #: ../config/launcher-9.rc.in.h:1
-#, fuzzy
+#, 
 msgid "File Manager"
-msgstr "文件管理"
+msgstr "文件管理器"
 
 #: ../config/launcher-9.rc.in.h:2
 msgid "Manage files and folders"
-msgstr ""
+msgstr "管理文件及文件夹"
 
 #: ../config/launcher-10.rc.in.h:1
 msgid "Surf the internet"
-msgstr ""
+msgstr "网上冲浪"
 
 #: ../config/launcher-10.rc.in.h:2
-#, fuzzy
+#, 
 msgid "Web Browser"
-msgstr "帮助浏览器"
+msgstr "网页浏览器"
 
 #. dialogs are annoying, just spit out a warning
 #: ../libxfce4panel/xfce-panel-external-item.c:175
@@ -204,7 +204,7 @@ msgstr "无法打开 “%s ”模块。"
 
 #: ../panel/panel-dialogs.c:593
 msgid "Add Items to the Panel"
-msgstr ""
+msgstr "添加项目到面板"
 
 #: ../panel/panel-dialogs.c:623
 msgid ""
@@ -225,7 +225,7 @@ msgid "Full Width"
 msgstr "全屏宽度"
 
 #: ../panel/panel-dialogs.c:874 ../panel/panel-dialogs.c:1098
-#, fuzzy
+#, 
 msgid "Span Monitors"
 msgstr "跨显示器"
 
@@ -296,7 +296,7 @@ msgstr "外观"
 #. size
 #: ../panel/panel-dialogs.c:1369
 msgid "Size (pixels):"
-msgstr "大小（象素）："
+msgstr "大小（像素）："
 
 #: ../panel/panel-dialogs.c:1397
 msgid "Transparency (%):"
@@ -373,7 +373,7 @@ msgstr "数字液晶显示"
 
 #: ../plugins/clock/clock.c:486 ../plugins/systray/systray.c:399
 msgid "Show _frame"
-msgstr "显示帧数(_f)"
+msgstr "显示框架(_f)"
 
 #: ../plugins/clock/clock.c:493
 msgid "Clock Options"
@@ -381,7 +381,7 @@ msgstr "时钟选项"
 
 #: ../plugins/clock/clock.c:501
 msgid "Use 24-_hour clock"
-msgstr "使用24小时(_h)时钟显示"
+msgstr "使用24小时时钟显示(_h)"
 
 #: ../plugins/clock/clock.c:508
 msgid "Show AM/PM"
@@ -401,9 +401,9 @@ msgid "Only show minimized applications"
 msgstr "仅显示最小化程序"
 
 #: ../plugins/iconbox/iconbox.c:868
-#, fuzzy
+#, 
 msgid "Show applications of all workspaces"
-msgstr "显示所有(_A)工具区的任务。"
+msgstr "显示所有工作区的应用程序。"
 
 #: ../plugins/iconbox/iconbox.c:876 ../plugins/tasklist/tasklist.c:454
 msgid "Use all available space"
@@ -458,7 +458,7 @@ msgstr "网络"
 
 #: ../plugins/launcher/launcher-dialog.c:109
 msgid "Graphics"
-msgstr "图形"
+msgstr "图形处理"
 
 #: ../plugins/launcher/launcher-dialog.c:110
 msgid "Printer"
@@ -470,7 +470,7 @@ msgstr "生产力"
 
 #: ../plugins/launcher/launcher-dialog.c:112
 msgid "Office"
-msgstr ""
+msgstr "办公"
 
 #: ../plugins/launcher/launcher-dialog.c:113
 msgid "Sound"
@@ -481,9 +481,9 @@ msgid "Terminal"
 msgstr "终端"
 
 #: ../plugins/launcher/launcher-dialog.c:115
-#, fuzzy
+#, 
 msgid "Development"
-msgstr "开发者"
+msgstr "开发"
 
 #: ../plugins/launcher/launcher-dialog.c:413
 msgid "Select image file"
@@ -525,7 +525,7 @@ msgstr "列表中的第一个项目会显示在面板上。后加上的项目将
 
 #: ../plugins/launcher/launcher-dialog.c:1332
 msgid "Program Launcher"
-msgstr "程序起动器"
+msgstr "程序启动器"
 
 #: ../plugins/launcher/launcher-dialog.c:1420
 #: ../plugins/launcher/launcher-dialog.c:1521
@@ -536,6 +536,10 @@ msgid ""
 "\n"
 "For help using Zero Install, see http://0install.net"
 msgstr ""
+"Failed to run 0launch:\n"
+"%s\n"
+"\n"
+"For help using Zero Install, see http://0install.net"
 
 #: ../plugins/launcher/launcher-dialog.c:1486
 msgid ""
@@ -543,6 +547,9 @@ msgid ""
 "in the meantime. Not adding launcher (but any files downloaded have not been "
 "lost)."
 msgstr ""
+"The Zero Install GUI has finished, but the launcher dialog has disappeared "
+"in the meantime. Not adding launcher (but any files downloaded have not been "
+"lost)."
 
 #: ../plugins/launcher/launcher-dialog.c:1899
 msgid "Select file"
@@ -562,7 +569,7 @@ msgstr "列数："
 
 #: ../plugins/pager/pager.c:394
 msgid "Switch workspaces using the mouse wheel"
-msgstr ""
+msgstr "用鼠标滚轮切换工作区"
 
 #: ../plugins/separator/separator.c:255
 #: ../plugins/separator/separator.desktop.in.in.h:2
@@ -571,7 +578,7 @@ msgstr "分隔符或间隔"
 
 #: ../plugins/separator/separator.c:276
 msgid "_Draw Separator"
-msgstr "绘制(_D)分隔符"
+msgstr "绘制分隔符(_D)"
 
 #: ../plugins/separator/separator.c:285
 msgid "_Expand"
@@ -610,11 +617,11 @@ msgstr "最小宽度："
 
 #: ../plugins/tasklist/tasklist.c:463
 msgid "Use flat buttons"
-msgstr ""
+msgstr "使用平板按钮"
 
 #: ../plugins/tasklist/tasklist.c:480
 msgid "Show tasks from _all workspaces"
-msgstr "显示所有(_A)工具区的任务。"
+msgstr "显示所有工具区的任务(_A)。"
 
 #: ../plugins/tasklist/tasklist.c:490
 msgid "Show application _names"
@@ -635,12 +642,12 @@ msgstr "总是分组任务"
 #: ../plugins/windowlist/windowlist.c:241
 #, c-format
 msgid "Are you sure you want to remove workspace %d?"
-msgstr ""
+msgstr "你确认要移除工作区 %d 吗？"
 
 #: ../plugins/windowlist/windowlist.c:242
 #, c-format
 msgid "Are you sure you want to remove workspace '%s'?"
-msgstr ""
+msgstr "你确认要移除工作区 '%s' 吗？"
 
 #: ../plugins/windowlist/windowlist.c:508
 #, c-format
@@ -674,53 +681,55 @@ msgid ""
 "<i>Urgency notification</i> will blink the button when an application needs "
 "attention."
 msgstr ""
+"<i>紧急提示</i>会在应用程序需要你注意时使按钮闪烁。"
+
 
 #. Button Urgency Notification
 #: ../plugins/windowlist/windowlist-dialog.c:154
-#, fuzzy
+#, 
 msgid "Urgency Notification"
-msgstr "使用启动提示(_N)"
+msgstr "紧急提示"
 
 #: ../plugins/windowlist/windowlist-dialog.c:161
 msgid "_Disabled"
-msgstr ""
+msgstr "禁用(_D)"
 
 #: ../plugins/windowlist/windowlist-dialog.c:170
 msgid "For _other workspaces"
-msgstr ""
+msgstr "作用于其它工作区(_O)"
 
 #: ../plugins/windowlist/windowlist-dialog.c:179
-#, fuzzy
+#, 
 msgid "For _all workspaces"
-msgstr "显示所有(_A)工具区的任务。"
+msgstr "作用于所有工作区(_A)"
 
 #: ../plugins/windowlist/windowlist-dialog.c:193
-#, fuzzy
+#, 
 msgid "_Icon button"
-msgstr "动作按钮"
+msgstr "图标按钮(_I)"
 
 #: ../plugins/windowlist/windowlist-dialog.c:200
 msgid "A_rrow button"
-msgstr ""
+msgstr "箭头按钮(_R)"
 
 #: ../plugins/windowlist/windowlist-dialog.c:218
-#, fuzzy
+#, 
 msgid "Show _windows from all workspaces"
-msgstr "显示所有(_A)工具区的任务。"
+msgstr "显示所有工作区窗口(_W)。"
 
 #: ../plugins/windowlist/windowlist-dialog.c:227
-#, fuzzy
+#, 
 msgid "Show a_pplication icons"
-msgstr "显示程序名称(_N)"
+msgstr "显示应用程序图标(_P)"
 
 #: ../plugins/windowlist/windowlist-dialog.c:236
 msgid "Show wor_kspace actions"
-msgstr ""
+msgstr "显示工作区动作(_K)"
 
 #: ../mcs-plugin/plugin.c:46
-#, fuzzy
+#, 
 msgid "Panel"
-msgstr "面板%d"
+msgstr "面板"
 
 #: ../plugins/actions/actions.desktop.in.in.h:1
 msgid "Action Buttons"
@@ -775,9 +784,9 @@ msgid "Show list of available windows"
 msgstr "显示可用窗口的列表"
 
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:3
-#, fuzzy
+#, 
 msgid "Xfce 4 Panel Manager"
-msgstr "面板管理器"
+msgstr "xfce4 面板管理器"
 
 #~ msgid "Test Plugin"
 #~ msgstr "测试插件"
