--- a/po/ar.po
+++ b/po/ar.po
@@ -5,127 +5,127 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.4.0\n"
+"Project-Id-Version: xfce4-panel\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-12-19 19:30+0100\n"
-"PO-Revision-Date: 2005-09-29 20:15+0900\n"
-"Last-Translator: Saleh Alhathal <hathalsal@hotmail.com>\n"
-"Language-Team: Arabic <lumina@silverpen.de>\n"
+"POT-Creation-Date: 2006-08-12 17:05+0200\n"
+"PO-Revision-Date: 2007-02-02 10:45+0200\n"
+"Last-Translator: Mohamed Magdy <alnokta@yahoo.com>\n"
+"Language-Team: Arabeyes Translation & Documentation <admin@arabeyes.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Poedit-Language: Arabic\n"
+"X-Poedit-SourceCharset: utf-8\n"
 
 #: ../config/launcher-7.rc.in.h:1
-#, fuzzy
 msgid "Command Prompt"
-msgstr "أمر :"
+msgstr "سطر الأوامر"
 
 #: ../config/launcher-7.rc.in.h:2
 msgid "X terminal emulator"
-msgstr ""
+msgstr "اكس ترمينل اميلاتور"
 
 #: ../config/launcher-8.rc.in.h:1
 msgid "Edit text files"
-msgstr ""
+msgstr "عدل ملفات نصية"
 
-#: ../config/launcher-8.rc.in.h:2 ../plugins/launcher/launcher-dialog.c:102
+#: ../config/launcher-8.rc.in.h:2
+#: ../plugins/launcher/launcher-dialog.c:102
 msgid "Editor"
 msgstr "محرر"
 
 #: ../config/launcher-9.rc.in.h:1
-#, fuzzy
 msgid "File Manager"
-msgstr "متصفح الملفات"
+msgstr "مدير الملفات"
 
 #: ../config/launcher-9.rc.in.h:2
 msgid "Manage files and folders"
-msgstr ""
+msgstr "أدر الملفات والمجلدات"
 
 #: ../config/launcher-10.rc.in.h:1
 msgid "Surf the internet"
-msgstr ""
+msgstr "ابحر في الانترنت"
 
 #: ../config/launcher-10.rc.in.h:2
-#, fuzzy
 msgid "Web Browser"
-msgstr "متصفح المساعدة"
+msgstr "متصفح الويب"
 
 #. dialogs are annoying, just spit out a warning
 #: ../libxfce4panel/xfce-panel-external-item.c:175
 #, c-format
 msgid "An item was unexpectedly removed: \"%s\"."
-msgstr ""
+msgstr "لقد ازيل عنصر بصورة غير متوقعة: \"%s\"."
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:578
-#, fuzzy, c-format
+#, c-format
 msgid "Remove \"%s\"?"
-msgstr "/_حذف"
+msgstr "ازل \"%s\"?"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:581 ../panel/panel-app.c:874
-#: ../panel/panel-app.c:906 ../panel/panel-app.c:940
-#: ../plugins/launcher/launcher.c:375 ../plugins/launcher/launcher.c:401
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:581
+#: ../panel/panel-app.c:874
+#: ../panel/panel-app.c:906
+#: ../panel/panel-app.c:940
+#: ../plugins/launcher/launcher.c:375
+#: ../plugins/launcher/launcher.c:401
 #: ../plugins/launcher/launcher.c:437
 msgid "Xfce Panel"
 msgstr "شريط Xfce"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:583
-msgid ""
-"The item will be removed from the panel and its configuration will be lost."
+msgid "The item will be removed from the panel and its configuration will be lost."
 msgstr ""
 
 #. configure, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:770
 msgid "Properties"
-msgstr ""
+msgstr "خصائص"
 
 #. about item, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:787
 msgid "About"
-msgstr ""
+msgstr "حول"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:801
-#, fuzzy
 msgid "Move"
-msgstr "/_حذف"
+msgstr "انقل"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:821
-#, fuzzy
 msgid "Remove"
-msgstr "/_حذف"
+msgstr "ازل"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:838
-#, fuzzy
 msgid "Add New Item"
-msgstr "أضف مادة جديدة"
+msgstr "أضف شيء جديد"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:850 ../panel/panel.c:697
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:850
+#: ../panel/panel.c:697
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:1
 msgid "Customize Panel"
-msgstr ""
+msgstr "خصص الشريط"
 
 #: ../panel/panel.c:708
 msgid "Add Items"
-msgstr ""
+msgstr "أضف أشياء"
 
-#: ../panel/panel.c:724 ../plugins/actions/actions.c:280
-#: ../plugins/actions/actions.c:314 ../plugins/actions/actions.c:429
+#: ../panel/panel.c:724
+#: ../plugins/actions/actions.c:280
+#: ../plugins/actions/actions.c:314
+#: ../plugins/actions/actions.c:429
 msgid "Quit"
-msgstr ""
+msgstr "خروج"
 
 #: ../panel/panel.c:734
-#, fuzzy
 msgid "Restart"
-msgstr "/_إعادة التشغيل"
+msgstr "أعد البدأ"
 
 #: ../panel/panel.c:748
-#, fuzzy
 msgid "About the Xfce Panel"
-msgstr "شريط Xfce"
+msgstr "حول شريط اكسفس"
 
-#: ../panel/panel-app.c:238 ../panel/panel-app.c:876
-#, fuzzy
+#: ../panel/panel-app.c:238
+#: ../panel/panel-app.c:876
 msgid "Exit Xfce Panel?"
-msgstr "شريط Xfce"
+msgstr "اخرج من شريط اكسفس؟"
 
 #: ../panel/panel-app.c:877
 msgid "You can't remove the last panel. Would you like to exit the program?"
@@ -134,15 +134,16 @@ msgstr ""
 #: ../panel/panel-app.c:904
 #, c-format
 msgid "Remove Panel \"%d\"?"
-msgstr ""
+msgstr "ازل الشريط \"%d\"?"
 
 #: ../panel/panel-app.c:908
 msgid "The selected panel and all its items will be removed."
 msgstr ""
 
-#: ../panel/panel-app.c:947 ../panel/panel-app.c:950
+#: ../panel/panel-app.c:947
+#: ../panel/panel-app.c:950
 msgid "Developer"
-msgstr ""
+msgstr "مطوّر"
 
 #: ../panel/main.c:46
 #, fuzzy, c-format
@@ -172,6 +173,8 @@ msgid ""
 " Usage: %s [OPTIONS]\n"
 "\n"
 msgstr ""
+"الاستخدام: %s [OPTIONS]\n"
+"\n"
 
 #. Only translate the descriptions, not the options itself
 #: ../panel/main.c:55
@@ -195,46 +198,51 @@ msgstr ""
 
 #: ../panel/panel-dialogs.c:593
 msgid "Add Items to the Panel"
-msgstr ""
+msgstr "أضف أشياء إلى الشريط"
 
 #: ../panel/panel-dialogs.c:623
-msgid ""
-"Drag items from the list to a panel or remove them by dragging them back to "
-"the list."
+msgid "Drag items from the list to a panel or remove them by dragging them back to the list."
 msgstr ""
 
 #: ../panel/panel-dialogs.c:640
 msgid "Available Items"
-msgstr ""
+msgstr "الأشياء المتاحة"
 
-#: ../panel/panel-dialogs.c:866 ../panel/panel-dialogs.c:1090
+#: ../panel/panel-dialogs.c:866
+#: ../panel/panel-dialogs.c:1090
 msgid "Normal Width"
-msgstr ""
+msgstr "العرض العادي"
 
-#: ../panel/panel-dialogs.c:868 ../panel/panel-dialogs.c:1092
+#: ../panel/panel-dialogs.c:868
+#: ../panel/panel-dialogs.c:1092
 msgid "Full Width"
-msgstr ""
+msgstr "العرض الكامل"
 
-#: ../panel/panel-dialogs.c:874 ../panel/panel-dialogs.c:1098
+#: ../panel/panel-dialogs.c:874
+#: ../panel/panel-dialogs.c:1098
 #, fuzzy
 msgid "Span Monitors"
 msgstr "محرر"
 
-#: ../panel/panel-dialogs.c:934 ../panel/panel-dialogs.c:1163
+#: ../panel/panel-dialogs.c:934
+#: ../panel/panel-dialogs.c:1163
 msgid "Left"
-msgstr ""
+msgstr "يسار"
 
-#: ../panel/panel-dialogs.c:936 ../panel/panel-dialogs.c:1165
+#: ../panel/panel-dialogs.c:936
+#: ../panel/panel-dialogs.c:1165
 msgid "Right"
-msgstr ""
+msgstr "يمين"
 
-#: ../panel/panel-dialogs.c:941 ../panel/panel-dialogs.c:1170
+#: ../panel/panel-dialogs.c:941
+#: ../panel/panel-dialogs.c:1170
 msgid "Top"
-msgstr ""
+msgstr "الأعلى"
 
-#: ../panel/panel-dialogs.c:943 ../panel/panel-dialogs.c:1172
+#: ../panel/panel-dialogs.c:943
+#: ../panel/panel-dialogs.c:1172
 msgid "Bottom"
-msgstr ""
+msgstr "الأسفل"
 
 #. position
 #: ../panel/panel-dialogs.c:971
@@ -248,7 +256,7 @@ msgstr "موقع"
 
 #: ../panel/panel-dialogs.c:991
 msgid "Freely Moveable"
-msgstr ""
+msgstr "متحرك بحرية"
 
 #: ../panel/panel-dialogs.c:1106
 #, fuzzy
@@ -284,7 +292,8 @@ msgid "Select Monitor"
 msgstr "محرر"
 
 #. Button Layout
-#: ../panel/panel-dialogs.c:1358 ../plugins/clock/clock.c:467
+#: ../panel/panel-dialogs.c:1358
+#: ../plugins/clock/clock.c:467
 #: ../plugins/tasklist/tasklist.c:431
 #: ../plugins/windowlist/windowlist-dialog.c:187
 msgid "Appearance"
@@ -293,31 +302,30 @@ msgstr "مظهر"
 #. size
 #: ../panel/panel-dialogs.c:1369
 msgid "Size (pixels):"
-msgstr ""
+msgstr "الحجم (بكسل):"
 
 #: ../panel/panel-dialogs.c:1397
 msgid "Transparency (%):"
-msgstr ""
+msgstr "الشفافية (%):"
 
 #: ../panel/panel-dialogs.c:1421
 msgid "Make active panel opaque"
 msgstr ""
 
-#: ../panel/panel-dialogs.c:1460 ../panel/panel-dialogs.c:1496
+#: ../panel/panel-dialogs.c:1460
+#: ../panel/panel-dialogs.c:1496
 #: ../panel/panel-dialogs.c:1521
-#, fuzzy, c-format
+#, c-format
 msgid "Panel %d"
-msgstr "شريط Xfce"
+msgstr "الشريط %d"
 
 #: ../panel/panel-dialogs.c:1540
-#, fuzzy
 msgid "Remove Panel"
-msgstr "/_حذف"
+msgstr "ازل الشريط"
 
 #: ../panel/panel-dialogs.c:1553
-#, fuzzy
 msgid "New Panel"
-msgstr "شريط Xfce"
+msgstr "شريط جديد"
 
 #: ../panel/panel-dialogs.c:1610
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:2
@@ -325,7 +333,8 @@ msgstr "شريط Xfce"
 msgid "Panel Manager"
 msgstr "حجم شريط المهام :"
 
-#: ../plugins/actions/actions.c:261 ../plugins/actions/actions.c:297
+#: ../plugins/actions/actions.c:261
+#: ../plugins/actions/actions.c:297
 #: ../plugins/actions/actions.c:430
 #, fuzzy
 msgid "Lock screen"
@@ -359,10 +368,10 @@ msgstr "/_إغلاق الشاشة"
 msgid "%A %d %B %Y"
 msgstr "%A, %d %B %Y"
 
-#: ../plugins/clock/clock.c:455 ../plugins/clock/clock.desktop.in.in.h:1
-#, fuzzy
+#: ../plugins/clock/clock.c:455
+#: ../plugins/clock/clock.desktop.in.in.h:1
 msgid "Clock"
-msgstr "قفل"
+msgstr "الساعة"
 
 #. Keep order in sync with XfceClockMode
 #: ../plugins/clock/clock.c:479
@@ -375,63 +384,64 @@ msgstr "رقمية"
 
 #: ../plugins/clock/clock.c:481
 msgid "LED"
-msgstr ""
+msgstr "لمبة"
 
-#: ../plugins/clock/clock.c:486 ../plugins/systray/systray.c:399
+#: ../plugins/clock/clock.c:486
+#: ../plugins/systray/systray.c:399
 msgid "Show _frame"
 msgstr ""
 
 #: ../plugins/clock/clock.c:493
 msgid "Clock Options"
-msgstr ""
+msgstr "خيارات الساعة"
 
 #: ../plugins/clock/clock.c:501
 msgid "Use 24-_hour clock"
-msgstr ""
+msgstr "استخدم ساعة ال 24"
 
 #: ../plugins/clock/clock.c:508
-#, fuzzy
 msgid "Show AM/PM"
-msgstr "صباح/مساء"
+msgstr "اظهر صباحاً/مساء"
 
 #: ../plugins/clock/clock.c:515
 msgid "Display seconds"
-msgstr ""
+msgstr "اعرض الثواني"
 
 #: ../plugins/iconbox/iconbox.c:837
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:1
-#, fuzzy
 msgid "Icon Box"
-msgstr "أيقونة:"
+msgstr "صندوق الأيقونات"
 
 #: ../plugins/iconbox/iconbox.c:859
 msgid "Only show minimized applications"
-msgstr ""
+msgstr "اظهر التطبيقات المصغرة فقط"
 
 #: ../plugins/iconbox/iconbox.c:868
 #, fuzzy
 msgid "Show applications of all workspaces"
 msgstr "أظهر"
 
-#: ../plugins/iconbox/iconbox.c:876 ../plugins/tasklist/tasklist.c:454
+#: ../plugins/iconbox/iconbox.c:876
+#: ../plugins/tasklist/tasklist.c:454
 msgid "Use all available space"
-msgstr ""
+msgstr "استخدم كل المساحة المتاحة"
 
-#: ../plugins/launcher/launcher.c:373 ../plugins/launcher/launcher.c:435
+#: ../plugins/launcher/launcher.c:373
+#: ../plugins/launcher/launcher.c:435
 #, c-format
 msgid "Could not run \"%s\""
-msgstr ""
+msgstr "لم أستطع تشغيل \"%s\""
 
 #: ../plugins/launcher/launcher.c:398
 #, c-format
 msgid "Error in command \"%s\""
-msgstr ""
+msgstr "خطأ في الأمر \"%s\""
 
-#: ../plugins/launcher/launcher.c:675 ../plugins/launcher/launcher.c:1303
+#: ../plugins/launcher/launcher.c:675
+#: ../plugins/launcher/launcher.c:1303
 #: ../plugins/launcher/launcher-dialog.c:1167
-#, fuzzy
 msgid "New Item"
-msgstr "أضف مادة جديدة"
+msgstr "عنصر جديد"
 
 #: ../plugins/launcher/launcher.c:1304
 #, fuzzy
@@ -448,7 +458,7 @@ msgstr "متصفح الملفات"
 
 #: ../plugins/launcher/launcher-dialog.c:104
 msgid "Utilities"
-msgstr ""
+msgstr "وسائل"
 
 #: ../plugins/launcher/launcher-dialog.c:105
 msgid "Games"
@@ -480,7 +490,7 @@ msgstr "إنتاجية"
 
 #: ../plugins/launcher/launcher-dialog.c:112
 msgid "Office"
-msgstr ""
+msgstr "المكتب"
 
 #: ../plugins/launcher/launcher-dialog.c:113
 msgid "Sound"
@@ -492,35 +502,31 @@ msgstr "سطر اﻷوامر"
 
 #: ../plugins/launcher/launcher-dialog.c:115
 msgid "Development"
-msgstr ""
+msgstr "التطوير"
 
 #: ../plugins/launcher/launcher-dialog.c:413
-#, fuzzy
 msgid "Select image file"
-msgstr "إختر ملف"
+msgstr "اختر ملف صورة"
 
 #: ../plugins/launcher/launcher-dialog.c:459
 msgid "Select command"
 msgstr "إختر أمر"
 
 #: ../plugins/launcher/launcher-dialog.c:482
-#, fuzzy
 msgid "Name"
-msgstr "ألعاب"
+msgstr "الاسم"
 
 #: ../plugins/launcher/launcher-dialog.c:500
-#, fuzzy
 msgid "Description"
-msgstr "موقع"
+msgstr "الوصف"
 
 #: ../plugins/launcher/launcher-dialog.c:555
 msgid "Other..."
-msgstr ""
+msgstr "آخر"
 
 #: ../plugins/launcher/launcher-dialog.c:653
-#, fuzzy
 msgid "Command"
-msgstr "أمر :"
+msgstr "أمر "
 
 #: ../plugins/launcher/launcher-dialog.c:689
 msgid "Run in _terminal"
@@ -532,9 +538,7 @@ msgid "Use _startup notification"
 msgstr "أستخدم _تنبية بدأ التشغيل"
 
 #: ../plugins/launcher/launcher-dialog.c:1289
-msgid ""
-"The first item in the list is shown on the panel. Additional items will "
-"appear in a menu."
+msgid "The first item in the list is shown on the panel. Additional items will appear in a menu."
 msgstr ""
 
 #: ../plugins/launcher/launcher-dialog.c:1332
@@ -553,27 +557,25 @@ msgid ""
 msgstr ""
 
 #: ../plugins/launcher/launcher-dialog.c:1486
-msgid ""
-"The Zero Install GUI has finished, but the launcher dialog has disappeared "
-"in the meantime. Not adding launcher (but any files downloaded have not been "
-"lost)."
+msgid "The Zero Install GUI has finished, but the launcher dialog has disappeared in the meantime. Not adding launcher (but any files downloaded have not been lost)."
 msgstr ""
 
 #: ../plugins/launcher/launcher-dialog.c:1899
 msgid "Select file"
 msgstr "إختر ملف"
 
-#: ../plugins/pager/pager.c:336 ../plugins/pager/pager.desktop.in.in.h:2
+#: ../plugins/pager/pager.c:336
+#: ../plugins/pager/pager.desktop.in.in.h:2
 msgid "Pager"
 msgstr "مراقب المهام"
 
 #: ../plugins/pager/pager.c:364
 msgid "Number of rows:"
-msgstr ""
+msgstr "عدد الصفوف:"
 
 #: ../plugins/pager/pager.c:368
 msgid "Number of columns:"
-msgstr ""
+msgstr "عدد الأعمدة:"
 
 #: ../plugins/pager/pager.c:394
 msgid "Switch workspaces using the mouse wheel"
@@ -592,17 +594,18 @@ msgstr "فاصل"
 
 #: ../plugins/separator/separator.c:285
 msgid "_Expand"
-msgstr ""
+msgstr "_افرد"
 
 #: ../plugins/showdesktop/showdesktop.c:32
 msgid "Restore hidden windows"
-msgstr ""
+msgstr "استرجع النوافذ المخفية"
 
 #: ../plugins/showdesktop/showdesktop.c:33
 msgid "Hide windows and show desktop"
-msgstr ""
+msgstr "اخفي النوافذ واظهر سطح المكتب"
 
-#: ../plugins/systray/systray.c:69 ../plugins/systray/systray.c:84
+#: ../plugins/systray/systray.c:69
+#: ../plugins/systray/systray.c:84
 msgid "There is already a system tray running on this screen"
 msgstr "هناك صينية نظام تعمل مسبقا على الشاشة"
 
@@ -614,26 +617,25 @@ msgstr "لم أتمكن من تسجيل صينية النظام: %s"
 #: ../plugins/systray/systray.c:378
 #: ../plugins/systray/systray.desktop.in.in.h:2
 msgid "System Tray"
-msgstr ""
+msgstr "صينية النظام"
 
-#: ../plugins/tasklist/tasklist.c:406 ../plugins/tasklist/tasklist.c:476
+#: ../plugins/tasklist/tasklist.c:406
+#: ../plugins/tasklist/tasklist.c:476
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:2
-#, fuzzy
 msgid "Task List"
-msgstr "مهام"
+msgstr "قائمة المهام"
 
 #: ../plugins/tasklist/tasklist.c:439
 msgid "Minimum Width:"
-msgstr ""
+msgstr "العرض الأدنى:"
 
 #: ../plugins/tasklist/tasklist.c:463
 msgid "Use flat buttons"
-msgstr ""
+msgstr "استخدم ازرار مفلطحة"
 
 #: ../plugins/tasklist/tasklist.c:480
-#, fuzzy
 msgid "Show tasks from _all workspaces"
-msgstr "أظهر"
+msgstr "اظهر المهام من كل _مساحات العمل"
 
 #: ../plugins/tasklist/tasklist.c:490
 msgid "Show application _names"
@@ -641,15 +643,15 @@ msgstr ""
 
 #: ../plugins/tasklist/tasklist.c:504
 msgid "Never group tasks"
-msgstr ""
+msgstr "لا تجمع المهام أبداً"
 
 #: ../plugins/tasklist/tasklist.c:507
 msgid "Automatically group tasks"
-msgstr ""
+msgstr "جمع المهام تلقائياً"
 
 #: ../plugins/tasklist/tasklist.c:510
 msgid "Always group tasks"
-msgstr ""
+msgstr "اجمع المهام دوماً"
 
 #: ../plugins/windowlist/windowlist.c:241
 #, c-format
@@ -664,34 +666,32 @@ msgstr ""
 #: ../plugins/windowlist/windowlist.c:508
 #, c-format
 msgid "Workspace %d"
-msgstr ""
+msgstr "مساحة عمل %d"
 
 #: ../plugins/windowlist/windowlist.c:620
 #: ../plugins/windowlist/windowlist.c:626
 msgid "Add workspace"
-msgstr ""
+msgstr "أضف مساحة عمل"
 
 #: ../plugins/windowlist/windowlist.c:645
 #, c-format
 msgid "Remove Workspace %d"
-msgstr ""
+msgstr "ازل مساحة العمل %d"
 
 #: ../plugins/windowlist/windowlist.c:646
 #, c-format
 msgid "Remove Workspace '%s'"
-msgstr ""
+msgstr "ازل مساحة العمل '%s'"
 
 #. Windowlist Settings
 #: ../plugins/windowlist/windowlist-dialog.c:121
 #: ../plugins/windowlist/windowlist-dialog.c:209
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:2
 msgid "Window List"
-msgstr ""
+msgstr "قائمة النوافذ"
 
 #: ../plugins/windowlist/windowlist-dialog.c:147
-msgid ""
-"<i>Urgency notification</i> will blink the button when an application needs "
-"attention."
+msgid "<i>Urgency notification</i> will blink the button when an application needs attention."
 msgstr ""
 
 #. Button Urgency Notification
@@ -702,7 +702,7 @@ msgstr "أستخدم _تنبية بدأ التشغيل"
 
 #: ../plugins/windowlist/windowlist-dialog.c:161
 msgid "_Disabled"
-msgstr ""
+msgstr "_معطب"
 
 #: ../plugins/windowlist/windowlist-dialog.c:170
 msgid "For _other workspaces"
@@ -714,9 +714,8 @@ msgid "For _all workspaces"
 msgstr "أظهر"
 
 #: ../plugins/windowlist/windowlist-dialog.c:193
-#, fuzzy
 msgid "_Icon button"
-msgstr "أيقونة:"
+msgstr "_زر الأيقونة"
 
 #: ../plugins/windowlist/windowlist-dialog.c:200
 msgid "A_rrow button"
@@ -736,9 +735,8 @@ msgid "Show wor_kspace actions"
 msgstr ""
 
 #: ../mcs-plugin/plugin.c:46
-#, fuzzy
 msgid "Panel"
-msgstr "شريط Xfce"
+msgstr "الشريط"
 
 #: ../plugins/actions/actions.desktop.in.in.h:1
 msgid "Action Buttons"
@@ -751,7 +749,7 @@ msgstr "إغلاق الشاشة"
 
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
-msgstr ""
+msgstr "ماهى الساعة؟"
 
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:2
 msgid "Show icons of all running applications"
@@ -775,7 +773,7 @@ msgstr ""
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:1
 msgid "Show Desktop"
-msgstr ""
+msgstr "اظهر سطح المكتب"
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:2
 msgid "Toggle desktop show/hide"
@@ -783,24 +781,17 @@ msgstr ""
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
 msgid "Show notification icons"
-msgstr ""
+msgstr "اظهر أيقونات التذكير"
 
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
 msgid "Show all running applications"
-msgstr ""
+msgstr "اظهر كل التطبيقات التي تعمل"
 
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:1
 msgid "Show list of available windows"
-msgstr ""
+msgstr "اظهر قائمة بكل النوافذ المتاحة"
 
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:3
-#, fuzzy
 msgid "Xfce 4 Panel Manager"
-msgstr "حجم شريط المهام :"
+msgstr "مدير أشرطة اكسفس 4"
 
-#, fuzzy
-#~ msgid "Test Plugin"
-#~ msgstr "برنامج"
-
-#~ msgid "Size"
-#~ msgstr "حجم"
