--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-03 Maxim Dziumanenko <dziumanenko@gmail.com>
+
+	* uk.po: Update Ukrainian translation.
+
 2007-02-07  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* fr.po: Fixed accelerators.
