* *.po, *.pot, POTFILES.in: Regenerate the po files 	  to work with my branch import.
(Old svn revision: 25078)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-03-03 Nick Schermer <nick@xfce.org>
+
+	* *.po, *.pot, POTFILES.in: Regenerate the po files
+	  to work with my branch import.
+
 2007-03-03 Maxim Dziumanenko <dziumanenko@gmail.com>
 
 	* uk.po: Update Ukrainian translation.
