Completely hide the right-click menu when kiosk mode is enabled (Bug #2984).
(Old svn revision: 25125)

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
 NEWS for xfce4-panel
 ====================
 
+4.4.1
+=====
+- Completely hide the right-click menu when kiosk mode is enabled (Bug #2984).
+
 4.4.0
 =====
 - Many fixes when using the panel in a multiscreen setup (Jasper, Nick)
