* plugins/launcher/launcher-exec.c: ifdef the startup data structure. 	  Bug 2997, patch from Peter de Ridder.
(Old svn revision: 25144)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-03-10 8:27   nick
+
+	* plugins/launcher/launcher-exec.c: ifdef the startup data structure.
+	  Bug 2997, patch from Peter de Ridder.
+
 2007-03-07 19:35  nick
 
 	* libxfce4panel/xfce-panel-plugin-iface.c: Don't show the right-click menu
