basque translation update
(Old svn revision: 25176)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-16 Piarres Beobide <pi@beobide.net>
+
+	* eu.po: Basque translation update
+
 2007-03-03 Nick Schermer <nick@xfce.org>
 
 	* *.po, *.pot, POTFILES.in: Regenerate the po files
