--- a/po/eu.po
+++ b/po/eu.po
@@ -411,81 +411,75 @@ msgid "New Item"
 msgstr "Elementu berria"
 
 #: ../plugins/launcher/launcher-exec.c:485
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to launch \"%s\""
 msgstr "Ezin da \"%s\" abiarazi."
 
 #: ../plugins/launcher/launcher-dialog.c:590
 msgid "No icon"
-msgstr ""
+msgstr "Ikonorik ez"
 
 #: ../plugins/launcher/launcher-dialog.c:610
-#, fuzzy
 msgid "Select a Directory"
-msgstr "Monitorea Aukeratu"
+msgstr "Direktorio bat Aukeratu"
 
 #: ../plugins/launcher/launcher-dialog.c:654
-#, fuzzy
 msgid "Select an Application"
-msgstr "Ekintza mota hautatu:"
+msgstr "Aplikazio bat Hautatu:"
 
 #: ../plugins/launcher/launcher-dialog.c:664
 msgid "All Files"
-msgstr ""
+msgstr "Fixtategi Guztiak"
 
 #: ../plugins/launcher/launcher-dialog.c:669
 msgid "Executable Files"
-msgstr ""
+msgstr "Fixatetgi exekutagarriak"
 
 #: ../plugins/launcher/launcher-dialog.c:684
 msgid "Perl Scripts"
-msgstr ""
+msgstr "Pero Script-ak"
 
 #: ../plugins/launcher/launcher-dialog.c:690
 msgid "Python Scripts"
-msgstr ""
+msgstr "Python Script-ak"
 
 #: ../plugins/launcher/launcher-dialog.c:696
 msgid "Ruby Scripts"
-msgstr ""
+msgstr "Ruby Script-ak"
 
 #: ../plugins/launcher/launcher-dialog.c:702
 msgid "Shell Scripts"
-msgstr ""
+msgstr "Shell Script-ak"
 
 #: ../plugins/launcher/launcher-dialog.c:775
 msgid "Unknown"
-msgstr ""
+msgstr "Ezezaguna"
 
 #. allocate the chooser dialog
 #: ../plugins/launcher/launcher-dialog.c:778
 #, c-format
 msgid "Select an Icon for \"%s\""
-msgstr ""
+msgstr "Hauatatu ikono bat \"%s\"-entzat"
 
 #: ../plugins/launcher/launcher-dialog.c:1116
-#, fuzzy
 msgid "_Name"
-msgstr "Izena"
+msgstr "Ize_na"
 
 #: ../plugins/launcher/launcher-dialog.c:1134
-#, fuzzy
 msgid "_Description"
-msgstr "Azalpena"
+msgstr "A_zalpena"
 
 #: ../plugins/launcher/launcher-dialog.c:1153
-#, fuzzy
 msgid "_Icon"
-msgstr "Ikono Kutxa"
+msgstr "_Ikonoa"
 
 #: ../plugins/launcher/launcher-dialog.c:1171
-#, fuzzy
 msgid "Co_mmand"
-msgstr "Komandoa"
+msgstr "Ko_mandoa"
 
 #: ../plugins/launcher/launcher-dialog.c:1198
 msgid "_Working Directory"
-msgstr ""
+msgstr "_Lan Direktorioa"
 
 #: ../plugins/launcher/launcher-dialog.c:1230
 msgid "Run in _terminal"
@@ -566,9 +560,8 @@ msgid "Use flat buttons"
 msgstr "Botoi mugikorrak erabili"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:215
-#, fuzzy
 msgid "Show handle"
-msgstr "_Markoa Bistarazi"
+msgstr "Kudeatzailea Bistarazi"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:227
 msgid "Show tasks from _all workspaces"
@@ -675,7 +668,7 @@ msgstr "Idazmahai e_kintzak bistarazi"
 
 #: ../mcs-plugin/plugin.c:39
 msgid "Failed to launch 'xfce4-panel -c'"
-msgstr ""
+msgstr "Huts 'xfce4-panel -c' abiaraztekoan"
 
 #: ../mcs-plugin/plugin.c:57
 msgid "Panel"
