--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-18  Eren Turkay <erenturkay@xfce.org>
+ 
+    * tr.po: Updated the Turkish translation.
+
 2007-03-16 Piarres Beobide <pi@beobide.net>
 
 	* eu.po: Basque translation update
