Updated Finnish translation.
(Old svn revision: 25235)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,8 +1,12 @@
+2007-03-20  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
+
+	* fi.po: Updated Finnish translation.
+
 2007-03-18  Eren Turkay <erenturkay@xfce.org>
  
-    * tr.po: Updated the Turkish translation.
+	* tr.po: Updated the Turkish translation.
 
-2007-03-03 Maxim Dziumanenko <dziumanenko@gmail.com>
+2007-03-03  Maxim Dziumanenko <dziumanenko@gmail.com>
 
 	* uk.po: Update Ukrainian translation.
 
